2.0a1 (TBD)
------------------
- added multi_* functions to rio_tiler.reader to support multiple assets addresses
- added `rio_tiler.utils.has_mask_band` function
- added type hints

Breaking Changes:
- removed python 2 support
- new package architecture (.io submodule)
- introduced new rio_tiler.reader functions (part, preview, metadata...)
- renamed rio_tiler.main to rio_tiler.io.cogeo
- bucket and prefixes are defined in rio_tiler.io.dataset.`{dataset}_parse` function from 
  AWS supported Public Dataset
- renamed `minimum_tile_cover` to `minimum_overlap`
- renamed `tile_edge_padding` to `padding`

1.4.0 (2020-02-19)
------------------
- Add Sentinel2-L2A support (#137)
- Update Sentinel-2 sceneid schema (S2A_tile_20170323_07SNC_0 -> S2A_L1C_20170323_07SNC_0)

1.3.1 (2019-11-06)
------------------
- Add `warp_vrt_option` option for `utils.raster_get_stats` and `utils.tile_read` to
allow more custom VRT Warping. (ref: https://github.com/OSGeo/gdal/issues/1989#issue-518526399)
- Add `rio_tiler.utils.non_alpha_indexes` to find non-alpha band indexes (ref #127)

1.3.0 (2019-10-07)
------------------
- Allow `DatasetReader`, `DatasetWriter`, `WarpedVRT` input for `utils.raster_get_stats` and `utils.tile_read`
- add `minimum_tile_cover` option to filter dataset not covering a certain amount of the tile.
- add Sentinel-1 submodule

Breacking Changes:
- need rasterio>=1.1

1.2.11 (2019-09-18)
-------------------
- reduce memory footprint of expression tiler
- fix wrong calculation for overview size in `raster_get_stats` (#116)
- Add Landsat 8 QA Band (#117).

1.2.10 (2019-07-18)
-------------------
- add more colormap options (from matplotlib) and switch from txt files to numpy binaries (#115)

1.2.9 (2019-07-11)
------------------
- fix issue #113, adds depreciation warning for `bounds_crs` in favor of `dst_crs` 
in `rio_tiler.utils.get_vrt_transform`

1.2.8 (2019-07-08)
------------------
